--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
 
+      - name: Clear cache
+        uses: npm cache clean
+
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
 
