--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,10 @@ jobs:
         uses: actions/setup-node@v4
 
       - name: Clear cache
-        uses: npm cache clean
+        run: npm cache clean --force
 
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+        run: npm install
 
       - name: Build project
         run: npm run build
